Fix #2916 Error log Message Overflow (#2919)

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -11902,6 +11902,9 @@ span.required {
   float: right;
 }
 
+.pre-wrap {
+  white-space: pre-wrap; }
+
 /* @import this file */
 /* line 2, ../styles-dev/main/components/_inputs.scss */
 .form-control {
